@@ -5,6 +5,8 @@ edk2 (0~20170911.5dfba97c-1) UNRELEASED; urgency=medium
     - d/p/no-stack-protector-all-archs.diff: Refresh.
     - d/p/no-pie-for-arm.diff: Drop; superseded by upstream commit
       a6b53806.
+    - OpenSSL: Switch to the new openssl-1.1-based system, which no
+      longer requires patching.
 
  -- dann frazier <dannf@debian.org>  Mon, 11 Sep 2017 17:47:21 -0600
 
